conf: add ShadowFB option for easier modify
and performance compare between turn shadowfb on and off

--- a/conf/20-lsdc.conf
+++ b/conf/20-lsdc.conf
@@ -9,6 +9,7 @@ Section "OutputClass"
 	Option          "AccelMethod"   "exa"
 	# "fake", "software", "vivante", "etnaviv"
 	Option          "ExaType"       "fake"
+	Option          "ShadowFB"      "false"
 	Option          "SWcursor"      "false"
 	Option          "Atomic"        "true"
 	Option          "PageFlip"      "true"
