etnaviv: provide a wrong dri3 implement which should open the gpu fb
Signed-off-by: suijingfeng <suijingfeng@loongson.cn>

--- a/conf/20-loongson.conf
+++ b/conf/20-loongson.conf
@@ -8,7 +8,7 @@ Section "OutputClass"
 	# busid can not be provided in this section
 	# BusID         "pci:0@0:6:1"
 	Option          "AccelMethod"   "EXA"
-	Option          "ExaType"       "fake"
+	Option          "ExaType"       "etnaviv"
 	Option          "SWcursor"      "true"
 	Option          "Atomic"        "true"
 	Option          "ShadowFB"      "true"
