fake_exa: add gsgpu support
And there no need to do anything in fake_exa.c

before this patch, the code is as following:

void ms_exa_finish_access(PixmapPtr pPixmap, int index)
{
    struct ms_exa_pixmap_priv *priv = exaGetPixmapDriverPrivate(pPixmap);

    if (priv && priv->bo)
    {
        pPixmap->devPrivate.ptr = NULL;
    }
}

20-gsgpu.conf is also provided

Signed-off-by: suijingfeng <suijingfeng@loongson.cn>
Signed-off-by: gfx-ci <gfx-ci@loongson.cn>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -60,6 +60,7 @@ loongson_drv_la_SOURCES = \
 	 sprite.c \
 	 dri3.c \
 	 etnaviv_dri3.c \
+	 gsgpu_dri3.c \
 	 fake_exa.c \
 	 fake_exa.h \
 	 loongson_buffer.h \
