add etnaviv backend and code cleanup
the etnaviv backend should use libdrm_etnaviv

Signed-off-by: suijingfeng <suijingfeng@loongson.cn>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -61,6 +61,8 @@ loongson_drv_la_SOURCES = \
 	 dri3.c \
 	 etnaviv_dri3.c \
 	 gsgpu_dri3.c \
+	 etnaviv_exa.c \
+	 etnaviv_exa.h \
 	 fake_exa.c \
 	 fake_exa.h \
 	 loongson_exa.c \
