exa+etnaviv: add supertile resolve algorithm
Signed-off-by: Sui Jingfeng <suijingfeng@loongson.cn>

--- a/conf/20-lsdc.conf
+++ b/conf/20-lsdc.conf
@@ -11,7 +11,7 @@ Section "OutputClass"
 	Option          "ExaType"       "fake"
 	Option          "ShadowFB"      "false"
 	Option          "SWcursor"      "false"
-	Option          "Atomic"        "true"
-	Option          "PageFlip"      "true"
+	Option          "Atomic"        "false"
+	Option          "PageFlip"      "false"
 	Option          "Debug"         "false"
 EndSection
