--- a/conf/20-gsgpu.conf
+++ b/conf/20-gsgpu.conf
@@ -3,16 +3,17 @@
 #
 
 Section "OutputClass"
-	Identifier      "GodSon"
+	Identifier      "LoongGPU"
 	# kernel driver must be gsgpu
 	MatchDriver     "gsgpu"
 	Driver          "loongson"
-	Option          "PrimaryGPU"    "true"
-	Option          "AccelMethod"   "EXA"
-	Option          "ExaType"       "gsgpu"
-	Option          "SWcursor"      "false"
-	Option          "ShadowFB"      "true"
-	Option          "DoubleShadow"  "false"
-	Option          "PageFlip"      "true"
-	Option          "Debug"         "true"
+	Option          "PrimaryGPU"               "true"
+	Option          "AccelMethod"              "EXA"
+	Option          "ExaType"                  "gsgpu"
+	Option          "SWcursor"                 "false"
+	Option          "ShadowFB"                 "true"
+	Option          "DoubleShadow"             "false"
+	Option          "PageFlip"                 "false"
+	Option          "Debug"                    "false"
+	Option          "GlxVendorLibrary"         "loongson"
 EndSection
