--- a/conf/20-loongson.conf
+++ b/conf/20-loongson.conf
@@ -7,10 +7,11 @@ Section "OutputClass"
 	Option          "PrimaryGPU"    "true"
 	# busid can not be provided in this section
 	# BusID         "pci:0@0:6:1"
-	Option          "AccelMethod"   "EXA"
-	Option          "ExaType"       "etnaviv"
+	Option          "AccelMethod"   "none"
+	Option          "ExaType"       "fake"
 	Option          "SWcursor"      "true"
 	Option          "Atomic"        "true"
 	Option          "ShadowFB"      "true"
-	Option          "PageFlip"      "true"
+	Option          "DoubleShadow"  "false"
+	Option          "PageFlip"      "false"
 EndSection
