--- a/conf/20-loongson.conf
+++ b/conf/20-loongson.conf
@@ -1,17 +1,11 @@
-
 Section "OutputClass"
-	Identifier      "LOONGSON-DC"
-	# kernel driver must be loongson-drm
-	MatchDriver     "loongson-drm"
-	Driver          "loongson"
-	Option          "PrimaryGPU"    "true"
-	# busid can not be provided in this section
-	# BusID         "pci:0@0:6:1"
-	Option          "AccelMethod"   "none"
-	Option          "ExaType"       "fake"
-	Option          "SWcursor"      "true"
-	Option          "Atomic"        "true"
-	Option          "ShadowFB"      "true"
-	Option          "DoubleShadow"  "false"
-	Option          "PageFlip"      "false"
+    Identifier      "LOONGSON-DC"
+    MatchDriver     "loongson-drm"
+    Driver          "loongson"
+    Option          "PrimaryGPU"    "true"
+    Option          "AccelMethod"   "exa"
+    Option          "ExaType"       "etnaviv"
+    Option          "SWcursor"      "true"
+    Option          "ShadowFB"      "false"
+    Option          "PageFlip"      "false"
 EndSection
